<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".ui.CompanyFragment">
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
           android:id="@+id/constraint"
            android:paddingVertical="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="140dp" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_desc"
        android:paddingTop="30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />


    <TextView
        android:id="@+id/lbl_contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:textAllCaps="true"
        android:text="Контактные данные"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

    <TextView
        android:id="@+id/lbl_tel"
       android:layout_marginTop="15dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/tel"
        app:layout_constraintStart_toStartOf="@+id/lbl_www"
        app:layout_constraintTop_toBottomOf="@+id/lbl_www" />

    <TextView
        android:id="@+id/tv_tel"
        android:layout_width="110dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/lbl_tel" />

    <TextView
        android:id="@+id/lbl_www"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/url"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_contact" />

    <TextView
        android:id="@+id/tv_lat"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/lbl_lat" />

    <TextView
        android:id="@+id/tv_lon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/lbl_lon" />


    <TextView
        android:id="@+id/lbl_place"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/place"
        android:textAllCaps="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tel" />

    <TextView
        android:id="@+id/lbl_lat"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lat"
        app:layout_constraintStart_toStartOf="@+id/lbl_tel"
        app:layout_constraintTop_toBottomOf="@+id/lbl_place" />

    <TextView
        android:id="@+id/lbl_lon"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/lon"
        app:layout_constraintStart_toStartOf="@+id/lbl_lat"
        app:layout_constraintTop_toBottomOf="@+id/lbl_lat" />

    <TextView
        android:id="@+id/tv_www"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/lbl_www" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</FrameLayout>